Removed information not applicable to self-study course

--- a/fyrirlestrar/01/01.1.kynning.md
+++ b/fyrirlestrar/01/01.1.kynning.md
@@ -6,7 +6,7 @@ title: Fyrirlestur 1.1 — Kynning
 
 ## Vefforritun 2 — HBV403G
 
-### Ólafur Sverrir Kjartansson, [osk@hi.is](mailto:osk@hi.is)
+### eftir Ólafur Sverrir Kjartansson
 
 ---
 
@@ -36,7 +36,7 @@ title: Fyrirlestur 1.1 — Kynning
 * Verðum dugleg að nota Git
 * Öll verkefni á GitHub
   - Í lagi að nota annað, t.d. GitLab, BitBucket
-* Grunnkóði fyrir allt námsefni [þessa námskeiðis](https://github.com/Vefforritun/vef2-2019)
+* Grunnkóði fyrir allt námsefni [þessa námskeiðis](https://github.com/HBV403G/2020V)
 
 ***
 
@@ -48,16 +48,15 @@ title: Fyrirlestur 1.1 — Kynning
 ## Samskipti
 
 * Allt efni sett inn á GitHub
-  - https://github.com/vefforritun/vef2-2019
+  - https://github.com/HBV403G/2020V
 * Tilkynningar sendar í gegnum Uglu og berast á HÍ netfang
 
 ***
 
-## Slack
+## Piazza
 
-* Slack fyrir dagleg samskipti
-  - Skráning með `@hi.is` netfangi á https://vefforritun.slack.com/
-  - Notum `#vef2-2019` rásina
+* Piazza fyrir dagleg samskipti
+  - Skráning með `@hi.is` netfangi á piazza.com/hi.is/spring2020/hbv403g
 
 ***
 
@@ -76,30 +75,8 @@ title: Fyrirlestur 1.1 — Kynning
 * [Vefforritun 1 2017](https://notendur.hi.is/~osk1/vefforritun/2017/)
 * [Vefforritun 2 2018](https://github.com/vefforritun/vef2-2018)
 * [Vefforritun 1 2018](https://github.com/vefforritun/vef1-2018)
-
----
-
-## Fyrirlestrar
-
-* Fimmtudögum kl. 15:00 í N-132
-* _Þrír_ fyrirlestrar í röð
-  - Stefni á tvo fyrirlestra með efni og einn með dæmi/einhverju öðru
-
-***
-
-## Upptökur
-
-* Stefni á að taka alla upp
-  - Þó lofa ég engu ef tæknin klikkar
-  - [Sett inn á YouTube](https://www.youtube.com/playlist?list=PLRj-ccg8iozy9xtBk-02VNOnOoIFR84Oe)
-
----
-
-## Dæmatímar
-
-* Hópaskipting og upplýsingar um dæmatímakennara á Uglu
-  - Mun liggja fyrir seinna í þessari viku
-* Ef þú vilt skipta um dæmatímahóp skaltu finna einhvern til að skipta við
+* [Vefforritun 2 2019](https://github.com/vefforritun/vef2-2019)
+* [Vefforritun 1 2019](https://github.com/Wolfcoder13/vefforritun-1)
 
 ---
 
@@ -114,30 +91,16 @@ title: Fyrirlestur 1.1 — Kynning
 8 verkefni í heildina.
 
 * Sex lítil
-  - Sett fyrir og kynnt í fyrirlestri á fimmtudegi
-  - Skilað á föstudegi tveimur vikum seinna
-  - 5 bestu gilda 6% hvert, samtals 30%
-  - Megið ræða saman um verkefni en **skrifið ykkar eigin lausn**
+  - Sett fyrir og kynnt í fyrirlestri
 
 ***
 
-## Stærri verkefni
+## Hópverkefni
 
-* Tvö stærri verkefni, gilda 15% hvort
+* Tvö stærri verkefni
 * Verkefni unnin í hópum, 2-3 saman
-* Sett fyrir
-  - Fyrra 18. febrúar – vefþjónustur
-  - Seinna 14. mars – framendi ofan á vefþjónustu
 
 ***
-
-## Verkefnaskil
-
-* Verkefnum og einkunnum fyrir þau er skilað í gegnum Uglu
-  - „Verkefni og hlutapróf“
-* Lesið leiðbeiningar og skilið öllu því sem beðið er um
-
----
 
 ## Lokapróf
 
@@ -150,16 +113,8 @@ title: Fyrirlestur 1.1 — Kynning
 
 ## Einkunn
 
-* Verkefnahluti gildir 60%
-* Lokapróf gildir 40%
-* Ná verður *bæði* verkefnahluta og lokaprófi með lágmarkseinkunn 5
-
----
-
-## Mæting
-
-* Engin skyldumæting
-* En… mæting mun skila sér í betri einkunn
+* Lokapróf gildir 100%
+* Ná verður lokaprófi með lágmarkseinkunn 5
 
 ---
 
@@ -213,7 +168,7 @@ Nemendur sem ljúka þessu námskeiði geta:
 
 * Mikið af efni
 * Líklegt að eitthvað detti út
-* [Nánari kennsluáætlun á GitHub vef námskeiðs](https://github.com/vefforritun/vef2-2019)
+* [Nánari kennsluáætlun á GitHub vef námskeiðs](https://github.com/HBV403G/2020V)
 
 ---
 
